modified README & Troubleshooting