@@ -1,6 +1,8 @@
 # Troubleshooting
 
-このドキュメントでは、`data-platform` プロジェクトの Spark / Scala / ClickHouse 連携実装時に発生したエラーと、その原因・対処方法をまとめる。
+このドキュメントでは、`data-platform` の実行・ビルド・Spark・ClickHouse連携で発生する問題について、エラー、原因、対処方法をまとめます。
+
+システム構成、ディレクトリ構成、通常の実行手順については `README.md` を参照してください。
 
 ---
 
@@ -23,26 +25,26 @@ sbt clean compile
 
 ### 原因
 
-使用している sbt のバージョン・実行環境では、
+使用しているsbtの実行環境では、
 
 ```bash
 sbt clean compile
 ```
 
-を1回のコマンドとして正しく解釈できず、`clean compile` の部分をsbtの構文として解析しようとしてエラーになった。
+を1回のコマンドとして正しく解釈できず、`clean compile` をsbtの構文として解析しようとしてエラーになりました。
 
 ### 対処方法
 
-`clean` と `compile` を分けて実行する。
+`clean` と `compile` を分けて実行します。
 
 ```bash
 sbt clean
 sbt compile
 ```
 
-### 確認結果
+### 確認
 
-以下のように分けて実行することでコンパイルできた。
+以下でコンパイルできることを確認します。
 
 ```bash
 sbt clean
@@ -55,41 +57,31 @@ sbt compile
 
 ### 問題となった設定
 
-当初、`build.sbt` に以下のような設定を入れていた。
+当初、`build.sbt` に以下の設定を使用していました。
 
 ```scala
 "com.clickhouse" % "clickhouse-jdbc" % "0.9.8" classifier("all")
 ```
 
-また、以下の書き方も使用していた。
+また、以下の書き方も使用していました。
 
 ```scala
 "com.clickhouse" % "clickhouse-jdbc" % "0.9.8" classifier "all"
 ```
 
-### 問題点
+### 原因
 
-このプロジェクトでは ClickHouse JDBC ドライバを通常の依存関係として追加すればよく、`classifier("all")` は必要ない。
+このプロジェクトではClickHouse JDBCドライバを通常の依存関係として追加すればよく、`classifier("all")` は必要ありません。
 
-また、`classifier "all"` のような古いsbt記法を使う必要もない。
+### 対処方法
 
-### 推奨設定
+以下のようにします。
 
 ```scala
 "com.clickhouse" % "clickhouse-jdbc" % "0.9.8"
 ```
 
-### 修正後
-
-`build.sbt` では以下のように記述する。
-
-```scala
-libraryDependencies ++= Seq(
-  "org.apache.spark" %% "spark-core" % "3.5.6",
-  "org.apache.spark" %% "spark-sql" % "3.5.6",
-  "com.clickhouse" % "clickhouse-jdbc" % "0.9.8"
-)
-```
+現在の `build.sbt` ではこの形式になっています。
 
 ---
 
@@ -109,74 +101,41 @@ sbt run
 
 ### 原因
 
-プロジェクト内にScalaのmain classが複数存在していた。
+Scalaプロジェクト内に複数のmain classが存在する場合、`sbt run` だけでは実行対象を決定できないことがあります。
 
-確認すると、
+### 確認方法
+
+以下でmain classを確認します。
 
 ```bash
 find src -type f -name "*.scala" -print
 ```
 
-で以下の2ファイルが存在していた。
-
-```text
-src/main/scala/com/example/SalesProcessor.scala
-src/main/scala/com/example/CardTransactionProcessor.scala
-```
-
-さらに、
+また、
 
 ```bash
 sbt 'show Compile / discoveredMainClasses'
 ```
 
-を実行すると、
-
-```text
-com.example.CardTransactionProcessor
-com.example.SalesProcessor
-```
-
-の2つがmain classとして検出された。
-
-このため、単純に
-
-```bash
-sbt run
-```
-
-を実行した場合、sbtがどのmain classを起動すべきか決定できなかった。
+でsbtが検出しているmain classを確認できます。
 
 ### 対処方法
 
-実行するmain classを明示する。
-
-今回実行したいのは `SalesProcessor` なので、
+実行対象のmain classを明示します。
 
 ```bash
 sbt 'runMain com.example.SalesProcessor'
 ```
 
-を使用する。
+### 現在の実行対象
 
-### 確認方法
-
-main classの一覧は以下で確認できる。
-
-```bash
-sbt 'show Compile / discoveredMainClasses'
-```
-
-### 補足
-
-今回のプロジェクトでは、
+現在の主要なSpark処理は、
 
 ```text
-com.example.CardTransactionProcessor
 com.example.SalesProcessor
 ```
 
-の2つが存在するため、基本的には `runMain` を使用して実行対象を明示する。
+です。
 
 ---
 
@@ -190,65 +149,27 @@ org.apache.spark.sql.AnalysisException:
 file:/home/hogeta/projects/raw/card_transactions
 ```
 
-### 発生した設定
-
-`SalesProcessor.scala` では当初、
-
-```scala
-val transactionPath =
-  "../../../raw/card_transactions"
-
-val customerPath =
-  "../../../raw/customer_master/customer.csv"
-```
-
-としていた。
-
-### 実行場所
-
-Sparkプロジェクトのディレクトリは、
-
-```text
-/home/hogeta/projects/data-platform/spark/sales-processing
-```
-
-である。
-
 ### 原因
 
-相対パスの基準は、Scalaソースファイルの場所ではなく、**プログラムを実行した現在のディレクトリ**になる。
+相対パスはScalaソースファイルの場所ではなく、**プログラムを実行した現在のディレクトリ**を基準として解決されます。
 
-実行場所：
+例えばSparkプロジェクトが、
 
 ```text
-/home/hogeta/projects/data-platform/spark/sales-processing
+data-platform/spark/sales-processing
 ```
 
-ここから、
+にある場合、
 
 ```text
 ../../../raw/card_transactions
 ```
 
-とすると、
-
-```text
-/home/hogeta/projects/raw/card_transactions
-```
-
-を参照してしまう。
-
-しかし実際の `raw` ディレクトリは、
-
-```text
-/home/hogeta/projects/data-platform/raw
-```
-
-にある。
+とすると、`data-platform` の外側を参照してしまいます。
 
 ### 正しい相対パス
 
-以下のように修正する。
+現在の `SalesProcessor.scala` では以下を使用しています。
 
 ```scala
 val transactionPath =
@@ -258,47 +179,41 @@ val customerPath =
   "../../raw/customer_master/customer.csv"
 ```
 
-ディレクトリ構造は以下。
+### 実行時の確認
 
-```text
-data-platform/
-├── raw/
-│   ├── card_transactions/
-│   ├── customer_master/
-│   │   └── customer.csv
-│   └── input/
-│
-└── spark/
-    └── sales-processing/
-        ├── build.sbt
-        └── src/
+Sparkプロジェクトへ移動します。
+
+```bash
+cd spark/sales-processing
 ```
 
-`data-platform/spark/sales-processing` から `data-platform/raw` へ移動するには、
+現在のディレクトリを確認します。
 
-```text
-../      → spark
-../../   → data-platform
+```bash
+pwd
 ```
 
-となる。
+入力データの存在を確認します。
 
-したがって、
-
-```text
-../../raw/card_transactions
-../../raw/customer_master/customer.csv
+```bash
+ls -lh ../../raw/card_transactions/
+ls -lh ../../raw/customer_master/customer.csv
 ```
 
-が正しい。
+### 対処方法
+
+基本的にはSparkプロジェクトディレクトリから実行します。
+
+```bash
+cd spark/sales-processing
+sbt 'runMain com.example.SalesProcessor'
+```
 
 ---
 
 ## 5. ANTLRバージョン不一致によるSpark SQLエラー
 
 ### エラー
-
-Spark起動自体は成功したが、CSV読み込み時に以下のエラーが発生した。
 
 ```text
 ANTLR Tool version 4.9.3 used for code generation does not match
@@ -320,67 +235,41 @@ org.antlr.v4.runtime.atn.ATN;
 Could not deserialize ATN with version 3 (expected 4).
 ```
 
-となった。
-
 ### 発生箇所
 
-スタックトレースから、Spark SQLのCSV読み込み処理で発生していることが分かる。
+Spark SQLのCSV読み込み処理で発生します。
 
 ```text
-at org.apache.spark.sql.execution.datasources.csv.CSVFileFormat.inferSchema
+org.apache.spark.sql.execution.datasources.csv.CSVFileFormat.inferSchema
 ```
-
-最終的には、
-
-```text
-at com.example.SalesProcessor$.main(SalesProcessor.scala:63)
-```
-
-で発生している。
 
 ### 原因
 
-ANTLRのバージョンが競合している。
+ANTLRのバージョンが競合しています。
 
-ログには、
-
-```text
-ANTLR Tool version 4.9.3
-```
-
-と、
+想定されるANTLR：
 
 ```text
-current runtime version 4.13.2
-```
-
-が同時に表示されている。
-
-つまり、
-
-```text
-Spark側が想定しているANTLR
-        ↓
 4.9.3
+```
 
-実際にクラスパスへ入っているANTLR Runtime
-        ↓
+実際にクラスパスへ入っているRuntime：
+
+```text
 4.13.2
 ```
 
-となっており、バージョンが一致していない。
-
-ANTLRが生成したパーサーと、実行時のANTLR Runtimeのバージョンが一致しないため、
+ANTLRが生成したパーサーと実行時Runtimeのバージョンが一致しないため、
 
 ```text
 Could not deserialize ATN
 ```
 
-が発生している。
+が発生します。
 
 ### 対処方法
 
-`build.sbt` にANTLR Runtimeのバージョンを明示的に固定する。
+`build.sbt` でANTLR Runtimeを明示的に固定します。
 
 ```scala
 dependencyOverrides ++= Seq(
@@ -388,923 +277,22 @@ dependencyOverrides ++= Seq(
 )
 ```
 
-### 修正後の `build.sbt`
-
-```scala
-ThisBuild / scalaVersion := "2.12.20"
-
-Compile / run / fork := true
-
-Compile / run / javaOptions ++= Seq(
-  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
-)
-
-lazy val root = (project in file("."))
-  .settings(
-    name := "sales-processing",
-    version := "1.0.0",
-
-    libraryDependencies ++= Seq(
-      "org.apache.spark" %% "spark-core" % "3.5.6",
-      "org.apache.spark" %% "spark-sql" % "3.5.6",
-      "com.clickhouse" % "clickhouse-jdbc" % "0.9.8"
-    ),
-
-    dependencyOverrides ++= Seq(
-      "org.antlr" % "antlr4-runtime" % "4.9.3"
-    )
-  )
-```
-
-### 依存関係の確認
-
-修正後、
+### 依存関係を確認
 
 ```bash
 sbt clean
 sbt compile
-```
-
-を実行する。
-
-その後、
-
-```bash
-sbt 'show Compile / dependencyClasspath' | grep -i antlr
-```
-
-でANTLRの依存関係を確認する。
-
-`antlr4-runtime-4.9.3.jar` が使用されていることを確認する。
-
-### 再実行
-
-```bash
-sbt 'runMain com.example.SalesProcessor'
-```
-
----
-
-# 6. Spark起動時に表示される警告について
-
-今回の実行では、以下の警告も表示された。
-
-```text
-WARN Utils: Your hostname, hoge resolves to a loopback address:
-127.0.1.1; using 192.168.3.25 instead
-```
-
-また、
-
-```text
-WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address
-```
-
-が表示された。
-
-### 原因
-
-ホスト名 `hoge` が、
-
-```text
-127.0.1.1
-```
-
-というループバックアドレスに解決されているため、Sparkが実際のネットワークインターフェースである、
-
-```text
-192.168.3.25
-```
-
-を使用している。
-
-### 今回の対応
-
-今回の処理自体はSparkが、
-
-```text
-SparkContext
-SparkUI
-Executor
-BlockManager
-```
-
-まで正常に起動しているため、この警告は今回の処理停止原因ではない。
-
-したがって、現時点では対応不要。
-
-必要になった場合は `SPARK_LOCAL_IP` の設定を検討する。
-
----
-
-# 7. SparkのNative Hadoop Library警告
-
-### 警告
-
-```text
-WARN NativeCodeLoader:
-Unable to load native-hadoop library for your platform...
-using builtin-java classes where applicable
-```
-
-### 原因
-
-環境にHadoopのネイティブライブラリが存在しないため、Sparkが組み込みのJava実装を使用している。
-
-### 今回の対応
-
-今回のSparkローカル実行では処理を進められているため、この警告は今回のエラー原因ではない。
-
-現時点では対応不要。
-
----
-
-# 8. 現在までに確認できていること
-
-現時点で以下の問題は解決済み。
-
-| 項目 | 状態 |
-|---|---|
-| sbt `clean compile` | `clean` / `compile`を分けて実行することで解決 |
-| ClickHouse JDBC classifier | `classifier("all")`を削除 |
-| Scala main class | `runMain`で明示することで解決 |
-| rawディレクトリの相対パス | `../../raw/...`へ修正 |
-| Spark起動 | 正常 |
-| Spark 3.5.6 | 正常起動 |
-| Java 17 | 正常 |
-| CSVファイルの探索 | パス修正後にSparkがファイル探索まで進行 |
-| ANTLR | 4.9.3へ固定して対応 |
-
----
-
-# 9. 推奨する実行手順
-
-現在のプロジェクトでは、以下の順番で実行する。
-
-## 9.1 プロジェクトへ移動
-
-```bash
-cd ~/projects/data-platform
-```
-
-## 9.2 トランザクションCSVを生成
-
-```bash
-python3 tools/card_transaction_generator.py
-```
-
-生成されたファイルを確認する。
-
-```bash
-ls -l raw/card_transactions/
-```
-
-想定：
-
-```text
-raw/card_transactions/transactions.csv
-```
-
-## 9.3 顧客マスターを確認
-
-```bash
-ls -l raw/customer_master/customer.csv
-```
-
-## 9.4 ClickHouseを起動
-
-```bash
-docker compose up -d
-```
-
-コンテナを確認。
-
-```bash
-docker ps
-```
-
-ClickHouseが起動していることを確認する。
-
-## 9.5 Sparkプロジェクトへ移動
-
-```bash
-cd ~/projects/data-platform/spark/sales-processing
-```
-
-## 9.6 コンパイル
-
-```bash
-sbt clean
-sbt compile
-```
-
-## 9.7 SalesProcessorを実行
-
-```bash
-sbt 'runMain com.example.SalesProcessor'
-```
-
----
-
-# 10. トラブルシューティング時の基本確認コマンド
-
-## Scalaファイル確認
-
-```bash
-find src -type f -name "*.scala" -print
-```
-
-## main class確認
-
-```bash
-sbt 'show Compile / discoveredMainClasses'
-```
-
-## build.sbt確認
-
-```bash
-cat -n build.sbt
-```
-
-## transaction CSV確認
-
-```bash
-ls -lh ../../raw/card_transactions/
-```
-
-## customer master確認
-
-```bash
-ls -lh ../../raw/customer_master/customer.csv
-```
-
-## ANTLR依存関係確認
-
-```bash
-sbt 'show Compile / dependencyClasspath' | grep -i antlr
-```
-
-## ClickHouseコンテナ確認
-
-```bash
-docker ps
-```
-
-## ClickHouse HTTP接続確認
-
-```bash
-curl http://localhost:8123
-```
-
----
-
-# 11. 現在のシステム構成
-
-```text
-Python
-  │
-  │ ランダムなカード取引データ生成
-  ▼
-raw/card_transactions/
-  └── transactions.csv
-        │
-        │
-        │
-raw/customer_master/
-  └── customer.csv
-        │
-        │
-        ▼
-┌──────────────────────────────┐
-│ Spark / SalesProcessor.scala │
-│                              │
-│ 1. transaction CSV読み込み   │
-│ 2. customer master読み込み   │
-│ 3. card_numberでJOIN         │
-│ 4. merged DataFrame生成      │
-└──────────────┬───────────────┘
-               │
-               │ JDBC
-               ▼
-┌──────────────────────────────┐
-│ ClickHouse                   │
-│                              │
-│ data_platform                │
-│   └── card_transactions      │
-└──────────────────────────────┘
-```
-
----
-
-# 12. 今後発生する可能性がある問題
-
-ANTLR問題を解決した後、次に確認すべきポイントは以下。
-
-## 12.1 ClickHouseが起動していない
-
-想定エラー：
-
-```text
-Connection refused
-```
-
-確認：
-
-```bash
-docker ps
-```
-
-起動：
-
-```bash
-docker compose up -d
-```
-
----
-
-## 12.2 ClickHouse JDBC接続エラー
-
-Sparkから、
-
-```text
-jdbc:clickhouse://localhost:8123/data_platform
-```
-
-へ接続できる必要がある。
-
-ClickHouseのHTTPポート：
-
-```text
-8123
-```
-
-がホストへ公開されていることを確認する。
-
----
-
-## 12.3 ClickHouseのテーブルが存在しない
-
-確認：
-
-```bash
-docker exec -it data-platform-clickhouse clickhouse-client
-```
-
-ClickHouse上で、
-
-```sql
-USE data_platform;
-
-SHOW TABLES;
-```
-
-を実行する。
-
-`card_transactions` が存在することを確認する。
-
----
-
-## 12.4 ClickHouseへのINSERT時の型不一致
-
-Spark DataFrameの型とClickHouseテーブルの型が一致していない場合、JDBC INSERT時にエラーになる可能性がある。
-
-特に、
-
-```text
-transaction_id
-unit_price
-quantity
-amount
-```
-
-などの整数型について確認する。
-
----
-
-## 12.5 同じデータを複数回INSERTしてしまう
-
-現在のSpark処理は、
-
-```scala
-.mode("append")
-```
-
-でClickHouseへ保存する設計になっている。
-
-そのため、
-
-```bash
-sbt 'runMain com.example.SalesProcessor'
-```
-
-を同じCSVに対して複数回実行すると、同じトランザクションが複数回INSERTされる可能性がある。
-
-また、現在のランダムデータ生成処理では、実行するたびに、
-
-```text
-transaction_id = 1
-transaction_id = 2
-...
-```
-
-のようにIDが再生成される可能性がある。
-
-今後、再実行を前提とするシステムにする場合は、
-
-- transaction_idの一意性
-- 重複排除
-- INSERT方式
-- DELETE / TRUNCATE
-- MergeTreeの設計
-
-などを検討する必要がある。
-
----
-
-# 13. 重要なポイント
-
-今回のトラブルでは、以下の3点が特に重要だった。
-
-### ① `sbt run` ではmain classを明示できない場合がある
-
-main classが複数存在する場合：
-
-```bash
-sbt 'runMain com.example.SalesProcessor'
-```
-
-を使用する。
-
-### ② 相対パスは「実行ディレクトリ」を基準に考える
-
-Scalaファイルの場所ではなく、
-
-```bash
-pwd
-```
-
-で確認できる現在のディレクトリを基準にする。
-
-### ③ Spark / Scalaでは依存ライブラリのバージョン競合に注意する
-
-今回のANTLRのように、
-
-```text
-コンパイル時のバージョン
-```
-
-と
-
-```text
-実行時のRuntimeバージョン
-```
-
-が異なると、Spark起動後の処理実行時にエラーになる場合がある。
-
-依存関係に問題がある場合は、
-
-```bash
-sbt 'show Compile / dependencyClasspath'
-```
-
-などで実際に使用されているJARを確認する。# Troubleshooting
-
-このドキュメントでは、`data-platform` プロジェクトの Spark / Scala / ClickHouse 連携実装時に発生したエラーと、その原因・対処方法をまとめる。
-
----
-
-## 1. sbt `clean compile` 実行時のエラー
-
-### エラー
-
-```text
-[error] Expected whitespace character
-[error] Expected '/'
-[error] clean compile
-[error]       ^
-```
-
-### 発生したコマンド
-
-```bash
-sbt clean compile
-```
-
-### 原因
-
-使用している sbt のバージョン・実行環境では、
-
-```bash
-sbt clean compile
-```
-
-を1回のコマンドとして正しく解釈できず、`clean compile` の部分をsbtの構文として解析しようとしてエラーになった。
-
-### 対処方法
-
-`clean` と `compile` を分けて実行する。
-
-```bash
-sbt clean
-sbt compile
-```
-
-### 確認結果
-
-以下のように分けて実行することでコンパイルできた。
-
-```bash
-sbt clean
-sbt compile
-```
-
----
-
-## 2. ClickHouse JDBC依存関係の `classifier` に関する問題
-
-### 問題となった設定
-
-当初、`build.sbt` に以下のような設定を入れていた。
-
-```scala
-"com.clickhouse" % "clickhouse-jdbc" % "0.9.8" classifier("all")
-```
-
-また、以下の書き方も使用していた。
-
-```scala
-"com.clickhouse" % "clickhouse-jdbc" % "0.9.8" classifier "all"
-```
-
-### 問題点
-
-このプロジェクトでは ClickHouse JDBC ドライバを通常の依存関係として追加すればよく、`classifier("all")` は必要ない。
-
-また、`classifier "all"` のような古いsbt記法を使う必要もない。
-
-### 推奨設定
-
-```scala
-"com.clickhouse" % "clickhouse-jdbc" % "0.9.8"
-```
-
-### 修正後
-
-`build.sbt` では以下のように記述する。
-
-```scala
-libraryDependencies ++= Seq(
-  "org.apache.spark" %% "spark-core" % "3.5.6",
-  "org.apache.spark" %% "spark-sql" % "3.5.6",
-  "com.clickhouse" % "clickhouse-jdbc" % "0.9.8"
-)
-```
-
----
-
-## 3. `sbt run` で `no main class detected`
-
-### エラー
-
-```text
-[error] java.lang.RuntimeException: no main class detected
-```
-
-### 発生したコマンド
-
-```bash
-sbt run
-```
-
-### 原因
-
-プロジェクト内にScalaのmain classが複数存在していた。
-
-確認すると、
-
-```bash
-find src -type f -name "*.scala" -print
-```
-
-で以下の2ファイルが存在していた。
-
-```text
-src/main/scala/com/example/SalesProcessor.scala
-src/main/scala/com/example/CardTransactionProcessor.scala
-```
-
-さらに、
-
-```bash
-sbt 'show Compile / discoveredMainClasses'
-```
-
-を実行すると、
-
-```text
-com.example.CardTransactionProcessor
-com.example.SalesProcessor
-```
-
-の2つがmain classとして検出された。
-
-このため、単純に
-
-```bash
-sbt run
-```
-
-を実行した場合、sbtがどのmain classを起動すべきか決定できなかった。
-
-### 対処方法
-
-実行するmain classを明示する。
-
-今回実行したいのは `SalesProcessor` なので、
-
-```bash
-sbt 'runMain com.example.SalesProcessor'
-```
-
-を使用する。
-
-### 確認方法
-
-main classの一覧は以下で確認できる。
-
-```bash
-sbt 'show Compile / discoveredMainClasses'
-```
-
-### 補足
-
-今回のプロジェクトでは、
-
-```text
-com.example.CardTransactionProcessor
-com.example.SalesProcessor
-```
-
-の2つが存在するため、基本的には `runMain` を使用して実行対象を明示する。
-
----
-
-## 4. Spark実行時の `PATH_NOT_FOUND`
-
-### エラー
-
-```text
-org.apache.spark.sql.AnalysisException:
-[PATH_NOT_FOUND] Path does not exist:
-file:/home/hogeta/projects/raw/card_transactions
-```
-
-### 発生した設定
-
-`SalesProcessor.scala` では当初、
-
-```scala
-val transactionPath =
-  "../../../raw/card_transactions"
-
-val customerPath =
-  "../../../raw/customer_master/customer.csv"
-```
-
-としていた。
-
-### 実行場所
-
-Sparkプロジェクトのディレクトリは、
-
-```text
-/home/hogeta/projects/data-platform/spark/sales-processing
-```
-
-である。
-
-### 原因
-
-相対パスの基準は、Scalaソースファイルの場所ではなく、**プログラムを実行した現在のディレクトリ**になる。
-
-実行場所：
-
-```text
-/home/hogeta/projects/data-platform/spark/sales-processing
-```
-
-ここから、
-
-```text
-../../../raw/card_transactions
-```
-
-とすると、
-
-```text
-/home/hogeta/projects/raw/card_transactions
-```
-
-を参照してしまう。
-
-しかし実際の `raw` ディレクトリは、
-
-```text
-/home/hogeta/projects/data-platform/raw
-```
-
-にある。
-
-### 正しい相対パス
-
-以下のように修正する。
-
-```scala
-val transactionPath =
-  "../../raw/card_transactions"
-
-val customerPath =
-  "../../raw/customer_master/customer.csv"
-```
-
-ディレクトリ構造は以下。
-
-```text
-data-platform/
-├── raw/
-│   ├── card_transactions/
-│   ├── customer_master/
-│   │   └── customer.csv
-│   └── input/
-│
-└── spark/
-    └── sales-processing/
-        ├── build.sbt
-        └── src/
-```
-
-`data-platform/spark/sales-processing` から `data-platform/raw` へ移動するには、
-
-```text
-../      → spark
-../../   → data-platform
-```
-
-となる。
-
-したがって、
-
-```text
-../../raw/card_transactions
-../../raw/customer_master/customer.csv
-```
-
-が正しい。
-
----
-
-## 5. ANTLRバージョン不一致によるSpark SQLエラー
-
-### エラー
-
-Spark起動自体は成功したが、CSV読み込み時に以下のエラーが発生した。
-
-```text
-ANTLR Tool version 4.9.3 used for code generation does not match
-the current runtime version 4.13.2
 ```
 
 続いて、
 
-```text
-Exception in thread "main" java.lang.ExceptionInInitializerError
-```
-
-さらに、
-
-```text
-Caused by: java.lang.UnsupportedOperationException:
-java.io.InvalidClassException:
-org.antlr.v4.runtime.atn.ATN;
-Could not deserialize ATN with version 3 (expected 4).
-```
-
-となった。
-
-### 発生箇所
-
-スタックトレースから、Spark SQLのCSV読み込み処理で発生していることが分かる。
-
-```text
-at org.apache.spark.sql.execution.datasources.csv.CSVFileFormat.inferSchema
-```
-
-最終的には、
-
-```text
-at com.example.SalesProcessor$.main(SalesProcessor.scala:63)
-```
-
-で発生している。
-
-### 原因
-
-ANTLRのバージョンが競合している。
-
-ログには、
-
-```text
-ANTLR Tool version 4.9.3
-```
-
-と、
-
-```text
-current runtime version 4.13.2
-```
-
-が同時に表示されている。
-
-つまり、
-
-```text
-Spark側が想定しているANTLR
-        ↓
-4.9.3
-
-実際にクラスパスへ入っているANTLR Runtime
-        ↓
-4.13.2
-```
-
-となっており、バージョンが一致していない。
-
-ANTLRが生成したパーサーと、実行時のANTLR Runtimeのバージョンが一致しないため、
-
-```text
-Could not deserialize ATN
-```
-
-が発生している。
-
-### 対処方法
-
-`build.sbt` にANTLR Runtimeのバージョンを明示的に固定する。
-
-```scala
-dependencyOverrides ++= Seq(
-  "org.antlr" % "antlr4-runtime" % "4.9.3"
-)
-```
-
-### 修正後の `build.sbt`
-
-```scala
-ThisBuild / scalaVersion := "2.12.20"
-
-Compile / run / fork := true
-
-Compile / run / javaOptions ++= Seq(
-  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
-)
-
-lazy val root = (project in file("."))
-  .settings(
-    name := "sales-processing",
-    version := "1.0.0",
-
-    libraryDependencies ++= Seq(
-      "org.apache.spark" %% "spark-core" % "3.5.6",
-      "org.apache.spark" %% "spark-sql" % "3.5.6",
-      "com.clickhouse" % "clickhouse-jdbc" % "0.9.8"
-    ),
-
-    dependencyOverrides ++= Seq(
-      "org.antlr" % "antlr4-runtime" % "4.9.3"
-    )
-  )
-```
-
-### 依存関係の確認
-
-修正後、
-
-```bash
-sbt clean
-sbt compile
-```
-
-を実行する。
-
-その後、
-
 ```bash
 sbt 'show Compile / dependencyClasspath' | grep -i antlr
 ```
 
-でANTLRの依存関係を確認する。
+を実行します。
 
-`antlr4-runtime-4.9.3.jar` が使用されていることを確認する。
+`antlr4-runtime-4.9.3.jar` が使用されていることを確認します。
 
 ### 再実行
 
@@ -1314,9 +302,9 @@ sbt 'runMain com.example.SalesProcessor'
 
 ---
 
-# 6. Spark起動時に表示される警告について
+## 6. Spark起動時のhostname / `SPARK_LOCAL_IP` 警告
 
-今回の実行では、以下の警告も表示された。
+### 警告
 
 ```text
 WARN Utils: Your hostname, hoge resolves to a loopback address:
@@ -1329,27 +317,15 @@ WARN Utils: Your hostname, hoge resolves to a loopback address:
 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address
 ```
 
-が表示された。
+が表示される場合があります。
 
 ### 原因
 
-ホスト名 `hoge` が、
+ホスト名がループバックアドレスに解決されているため、Sparkが別のネットワークアドレスを使用している状態です。
 
-```text
-127.0.1.1
-```
+### 判断
 
-というループバックアドレスに解決されているため、Sparkが実際のネットワークインターフェースである、
-
-```text
-192.168.3.25
-```
-
-を使用している。
-
-### 今回の対応
-
-今回の処理自体はSparkが、
+Sparkの以下のコンポーネントが正常に起動し、その後の処理も継続している場合、この警告自体は処理停止原因ではありません。
 
 ```text
 SparkContext
@@ -1358,15 +334,15 @@ Executor
 BlockManager
 ```
 
-まで正常に起動しているため、この警告は今回の処理停止原因ではない。
+### 対処
 
-したがって、現時点では対応不要。
+ローカル実行で問題なく処理できている場合、現時点では対応不要です。
 
-必要になった場合は `SPARK_LOCAL_IP` の設定を検討する。
+別のネットワークインターフェースへバインドする必要がある場合は、`SPARK_LOCAL_IP` の設定を検討します。
 
 ---
 
-# 7. SparkのNative Hadoop Library警告
+## 7. SparkのNative Hadoop Library警告
 
 ### 警告
 
@@ -1378,266 +354,143 @@ using builtin-java classes where applicable
 
 ### 原因
 
-環境にHadoopのネイティブライブラリが存在しないため、Sparkが組み込みのJava実装を使用している。
+環境にHadoopのネイティブライブラリが存在しないため、Sparkが組み込みのJava実装を使用しています。
 
-### 今回の対応
+### 対処
 
-今回のSparkローカル実行では処理を進められているため、この警告は今回のエラー原因ではない。
+今回のようなSparkローカル実行で処理が正常に進んでいる場合、この警告は処理停止原因ではありません。
 
-現時点では対応不要。
-
----
-
-# 8. 現在までに確認できていること
-
-現時点で以下の問題は解決済み。
-
-| 項目 | 状態 |
-|---|---|
-| sbt `clean compile` | `clean` / `compile`を分けて実行することで解決 |
-| ClickHouse JDBC classifier | `classifier("all")`を削除 |
-| Scala main class | `runMain`で明示することで解決 |
-| rawディレクトリの相対パス | `../../raw/...`へ修正 |
-| Spark起動 | 正常 |
-| Spark 3.5.6 | 正常起動 |
-| Java 17 | 正常 |
-| CSVファイルの探索 | パス修正後にSparkがファイル探索まで進行 |
-| ANTLR | 4.9.3へ固定して対応 |
+現時点では対応不要です。
 
 ---
 
-# 9. 推奨する実行手順
+## 8. ClickHouseが起動していない
 
-現在のプロジェクトでは、以下の順番で実行する。
+### 症状
 
-## 9.1 プロジェクトへ移動
-
-```bash
-cd ~/projects/data-platform
-```
-
-## 9.2 トランザクションCSVを生成
-
-```bash
-python3 tools/card_transaction_generator.py
-```
-
-生成されたファイルを確認する。
-
-```bash
-ls -l raw/card_transactions/
-```
-
-想定：
-
-```text
-raw/card_transactions/transactions.csv
-```
-
-## 9.3 顧客マスターを確認
-
-```bash
-ls -l raw/customer_master/customer.csv
-```
-
-## 9.4 ClickHouseを起動
-
-```bash
-docker compose up -d
-```
-
-コンテナを確認。
-
-```bash
-docker ps
-```
-
-ClickHouseが起動していることを確認する。
-
-## 9.5 Sparkプロジェクトへ移動
-
-```bash
-cd ~/projects/data-platform/spark/sales-processing
-```
-
-## 9.6 コンパイル
-
-```bash
-sbt clean
-sbt compile
-```
-
-## 9.7 SalesProcessorを実行
-
-```bash
-sbt 'runMain com.example.SalesProcessor'
-```
-
----
-
-# 10. トラブルシューティング時の基本確認コマンド
-
-## Scalaファイル確認
-
-```bash
-find src -type f -name "*.scala" -print
-```
-
-## main class確認
-
-```bash
-sbt 'show Compile / discoveredMainClasses'
-```
-
-## build.sbt確認
-
-```bash
-cat -n build.sbt
-```
-
-## transaction CSV確認
-
-```bash
-ls -lh ../../raw/card_transactions/
-```
-
-## customer master確認
-
-```bash
-ls -lh ../../raw/customer_master/customer.csv
-```
-
-## ANTLR依存関係確認
-
-```bash
-sbt 'show Compile / dependencyClasspath' | grep -i antlr
-```
-
-## ClickHouseコンテナ確認
-
-```bash
-docker ps
-```
-
-## ClickHouse HTTP接続確認
-
-```bash
-curl http://localhost:8123
-```
-
----
-
-# 11. 現在のシステム構成
-
-```text
-Python
-  │
-  │ ランダムなカード取引データ生成
-  ▼
-raw/card_transactions/
-  └── transactions.csv
-        │
-        │
-        │
-raw/customer_master/
-  └── customer.csv
-        │
-        │
-        ▼
-┌──────────────────────────────┐
-│ Spark / SalesProcessor.scala │
-│                              │
-│ 1. transaction CSV読み込み   │
-│ 2. customer master読み込み   │
-│ 3. card_numberでJOIN         │
-│ 4. merged DataFrame生成      │
-└──────────────┬───────────────┘
-               │
-               │ JDBC
-               ▼
-┌──────────────────────────────┐
-│ ClickHouse                   │
-│                              │
-│ data_platform                │
-│   └── card_transactions      │
-└──────────────────────────────┘
-```
-
----
-
-# 12. 今後発生する可能性がある問題
-
-ANTLR問題を解決した後、次に確認すべきポイントは以下。
-
-## 12.1 ClickHouseが起動していない
-
-想定エラー：
+SparkからClickHouseへ接続する際に、
 
 ```text
 Connection refused
 ```
 
-確認：
+などのエラーが発生します。
+
+### 確認
 
 ```bash
 docker ps
 ```
 
-起動：
+ClickHouseコンテナが起動していることを確認します。
+
+### 起動
+
+リポジトリのルートディレクトリで、
 
 ```bash
 docker compose up -d
 ```
 
+を実行します。
+
+再度確認します。
+
+```bash
+docker ps
+```
+
 ---
 
-## 12.2 ClickHouse JDBC接続エラー
+## 9. ClickHouse JDBC接続エラー
 
-Sparkから、
+### 接続先
+
+Sparkは以下のJDBC URLへ接続します。
 
 ```text
 jdbc:clickhouse://localhost:8123/data_platform
 ```
 
-へ接続できる必要がある。
+### 確認事項
 
-ClickHouseのHTTPポート：
+ClickHouseのHTTPポートである、
 
 ```text
 8123
 ```
 
-がホストへ公開されていることを確認する。
+がホストへ公開されていることを確認します。
+
+```bash
+docker ps
+```
+
+必要に応じて、
+
+```bash
+curl http://localhost:8123
+```
+
+でHTTP接続を確認します。
+
+### ClickHouseコンテナのログ確認
+
+```bash
+docker logs data-platform-clickhouse
+```
 
 ---
 
-## 12.3 ClickHouseのテーブルが存在しない
+## 10. ClickHouseのテーブルが存在しない
 
-確認：
+### 症状
+
+SparkからINSERTするときに、対象テーブルが存在しないというエラーが発生します。
+
+### ClickHouseへ接続
 
 ```bash
 docker exec -it data-platform-clickhouse clickhouse-client
 ```
 
-ClickHouse上で、
+### データベースを選択
 
 ```sql
 USE data_platform;
+```
 
+### テーブル確認
+
+```sql
 SHOW TABLES;
 ```
 
-を実行する。
+以下が存在することを確認します。
 
-`card_transactions` が存在することを確認する。
+```text
+card_transactions
+```
+
+### テーブル定義確認
+
+```sql
+DESCRIBE TABLE card_transactions;
+```
 
 ---
 
-## 12.4 ClickHouseへのINSERT時の型不一致
+## 11. ClickHouseへのINSERT時の型不一致
 
-Spark DataFrameの型とClickHouseテーブルの型が一致していない場合、JDBC INSERT時にエラーになる可能性がある。
+### 症状
 
-特に、
+Spark DataFrameからClickHouseへJDBC INSERTする際に、型に関するエラーが発生します。
+
+### 原因
+
+Spark DataFrameの型とClickHouseテーブルの型が一致していない可能性があります。
+
+特に以下の列を確認します。
 
 ```text
 transaction_id
@@ -1646,29 +499,91 @@ quantity
 amount
 ```
 
-などの整数型について確認する。
+### Spark側
+
+現在の `SalesProcessor.scala` では以下を `long` 型へ変換しています。
+
+```scala
+col("unit_price").cast("long"),
+col("quantity").cast("long"),
+col("amount").cast("long")
+```
+
+### ClickHouse側
+
+ClickHouseでは以下が `UInt32` です。
+
+```text
+transaction_id
+unit_price
+quantity
+amount
+```
+
+型エラーが発生した場合は、Spark側のDataFrame schemaとClickHouse側のテーブル定義を比較してください。
+
+Spark側：
+
+```text
+=== Merged Schema ===
+```
+
+ClickHouse側：
+
+```sql
+DESCRIBE TABLE data_platform.card_transactions;
+```
 
 ---
 
-## 12.5 同じデータを複数回INSERTしてしまう
+## 12. 同じデータを複数回INSERTしてしまう
 
-現在のSpark処理は、
+### 原因
+
+現在のSpark処理はClickHouseへの保存に、
 
 ```scala
 .mode("append")
 ```
 
-でClickHouseへ保存する設計になっている。
+を使用しています。
 
-そのため、
+そのため、同じ入力データに対して、
 
 ```bash
 sbt 'runMain com.example.SalesProcessor'
 ```
 
-を同じCSVに対して複数回実行すると、同じトランザクションが複数回INSERTされる可能性がある。
+を複数回実行すると、同じレコードが複数回INSERTされる可能性があります。
 
-また、現在のランダムデータ生成処理では、実行するたびに、
+### 確認
+
+```sql
+SELECT count()
+FROM data_platform.card_transactions;
+```
+
+同一の `transaction_id` が重複しているか確認する場合：
+
+```sql
+SELECT
+    transaction_id,
+    count()
+FROM data_platform.card_transactions
+GROUP BY transaction_id
+HAVING count() > 1
+ORDER BY transaction_id;
+```
+
+### データ生成時の注意
+
+`card_transaction_generator.py` では、
+
+```python
+for transaction_id in range(1, count + 1):
+```
+
+としているため、生成処理を再実行すると、再び
 
 ```text
 transaction_id = 1
@@ -1676,64 +591,406 @@ transaction_id = 2
 ...
 ```
 
-のようにIDが再生成される可能性がある。
+から生成されます。
 
-今後、再実行を前提とするシステムにする場合は、
+そのため、同じテーブルへ追加INSERTするとIDが重複する可能性があります。
 
-- transaction_idの一意性
-- 重複排除
-- INSERT方式
-- DELETE / TRUNCATE
-- MergeTreeの設計
+### 今後の改善ポイント
 
-などを検討する必要がある。
+再実行を前提としたシステムにする場合は、以下を検討する必要があります。
+
+* `transaction_id` の一意性
+* 重複排除
+* INSERT方式
+* DELETE / TRUNCATE
+* 冪等性
+* MergeTreeのテーブル設計
 
 ---
 
-# 13. 重要なポイント
+## 13. 取引CSVが存在しない
 
-今回のトラブルでは、以下の3点が特に重要だった。
+### 症状
 
-### ① `sbt run` ではmain classを明示できない場合がある
+以下のようなエラーが発生します。
 
-main classが複数存在する場合：
-
-```bash
-sbt 'runMain com.example.SalesProcessor'
+```text
+[PATH_NOT_FOUND] Path does not exist
 ```
 
-を使用する。
+### 確認
 
-### ② 相対パスは「実行ディレクトリ」を基準に考える
+```bash
+ls -lh raw/card_transactions/
+```
 
-Scalaファイルの場所ではなく、
+以下が存在することを確認します。
+
+```text
+transactions.csv
+```
+
+### 生成
+
+存在しない場合はリポジトリのルートで、
+
+```bash
+python3 tools/card_transaction_generator.py
+```
+
+を実行します。
+
+その後、
+
+```bash
+ls -lh raw/card_transactions/
+```
+
+で確認します。
+
+---
+
+## 14. 顧客マスターが存在しない
+
+### 症状
+
+Sparkが以下のファイルを読み込めません。
+
+```text
+raw/customer_master/customer.csv
+```
+
+### 確認
+
+リポジトリのルートから、
+
+```bash
+ls -lh raw/customer_master/customer.csv
+```
+
+を実行します。
+
+### 対処
+
+顧客マスターが存在しない場合、取引データ生成処理もカード番号を取得できないため実行できません。
+
+まず `customer.csv` が正しい場所に存在することを確認してください。
+
+---
+
+## 15. JOIN後のレコード数が期待より少ない
+
+### 症状
+
+Sparkで、
+
+```text
+Merged records: ...
+```
+
+と表示された件数が、取引CSVの件数より少なくなります。
+
+### 原因
+
+現在のJOINは、
+
+```scala
+.join(
+  customerDF,
+  Seq("card_number"),
+  "inner"
+)
+```
+
+というINNER JOINです。
+
+そのため、取引データの `card_number` が顧客マスターに存在しない場合、その取引レコードはJOIN後のDataFrameに残りません。
+
+### 確認
+
+取引CSV：
+
+```bash
+head raw/card_transactions/transactions.csv
+```
+
+顧客マスター：
+
+```bash
+head raw/customer_master/customer.csv
+```
+
+それぞれの、
+
+```text
+card_number
+```
+
+を確認します。
+
+---
+
+## 16. `purchase_date` の変換エラー
+
+### 処理内容
+
+`purchase_date` は以下の形式からTimestampへ変換しています。
+
+```text
+yyyy-MM-dd HH:mm:ss
+```
+
+Sparkでは、
+
+```scala
+to_timestamp(
+  col("purchase_date"),
+  "yyyy-MM-dd HH:mm:ss"
+)
+```
+
+を使用しています。
+
+### 確認
+
+入力CSVの値が以下の形式になっているか確認します。
+
+```text
+2026-09-03 08:02:53
+```
+
+異なる形式の場合、Timestampへの変換結果がNULLになる可能性があります。
+
+---
+
+## 17. ClickHouseへのINSERT後にデータを確認できない
+
+### 確認手順
+
+まずClickHouseが起動していることを確認します。
+
+```bash
+docker ps
+```
+
+次にClickHouseへ接続します。
+
+```bash
+docker exec -it data-platform-clickhouse clickhouse-client
+```
+
+データベースを選択します。
+
+```sql
+USE data_platform;
+```
+
+テーブルを確認します。
+
+```sql
+SHOW TABLES;
+```
+
+データ件数を確認します。
+
+```sql
+SELECT count()
+FROM card_transactions;
+```
+
+データを確認します。
+
+```sql
+SELECT *
+FROM card_transactions
+LIMIT 20;
+```
+
+---
+
+## 18. トラブルシューティング時の基本確認コマンド
+
+### 現在のディレクトリ
 
 ```bash
 pwd
 ```
 
-で確認できる現在のディレクトリを基準にする。
+### Scalaファイル
 
-### ③ Spark / Scalaでは依存ライブラリのバージョン競合に注意する
-
-今回のANTLRのように、
-
-```text
-コンパイル時のバージョン
+```bash
+find src -type f -name "*.scala" -print
 ```
 
-と
+### main class
 
-```text
-実行時のRuntimeバージョン
+```bash
+sbt 'show Compile / discoveredMainClasses'
 ```
 
-が異なると、Spark起動後の処理実行時にエラーになる場合がある。
+### build.sbt
 
-依存関係に問題がある場合は、
+```bash
+cat -n build.sbt
+```
+
+### transaction CSV
+
+```bash
+ls -lh ../../raw/card_transactions/
+```
+
+### customer master
+
+```bash
+ls -lh ../../raw/customer_master/customer.csv
+```
+
+### ANTLR依存関係
+
+```bash
+sbt 'show Compile / dependencyClasspath' | grep -i antlr
+```
+
+### ClickHouseコンテナ
+
+```bash
+docker ps
+```
+
+### ClickHouseログ
+
+```bash
+docker logs data-platform-clickhouse
+```
+
+### ClickHouse HTTP接続
+
+```bash
+curl http://localhost:8123
+```
+
+---
+
+## 19. 推奨する切り分け順序
+
+エラーが発生した場合は、以下の順番で確認します。
+
+### 1. 入力データ
+
+```bash
+ls -lh raw/customer_master/customer.csv
+ls -lh raw/card_transactions/transactions.csv
+```
+
+### 2. ClickHouse
+
+```bash
+docker ps
+```
+
+### 3. ClickHouse HTTP
+
+```bash
+curl http://localhost:8123
+```
+
+### 4. Sparkプロジェクト
+
+```bash
+cd spark/sales-processing
+```
+
+### 5. コンパイル
+
+```bash
+sbt clean
+sbt compile
+```
+
+### 6. main class
+
+```bash
+sbt 'show Compile / discoveredMainClasses'
+```
+
+### 7. Spark実行
+
+```bash
+sbt 'runMain com.example.SalesProcessor'
+```
+
+### 8. ClickHouse確認
+
+```bash
+docker exec -it data-platform-clickhouse clickhouse-client
+```
+
+```sql
+SELECT count()
+FROM data_platform.card_transactions;
+```
+
+---
+
+## 20. 解決済みの主な問題
+
+現在のコードでは、以下の問題への対処が反映されています。
+
+| 問題                              | 対処                             |
+| ------------------------------- | ------------------------------ |
+| sbt `clean compile` の実行エラー      | `clean` と `compile` を分けて実行     |
+| ClickHouse JDBC `classifier` 問題 | `classifier("all")` を使用しない     |
+| main classの選択問題                 | `runMain` で実行対象を明示             |
+| Sparkの相対パス問題                    | `../../raw/...` を使用            |
+| ANTLRバージョン競合                    | `antlr4-runtime` を `4.9.3` に固定 |
+| Spark hostname警告                | ローカル実行に影響しない場合は対応不要            |
+| Native Hadoop Library警告         | ローカル実行に影響しない場合は対応不要            |
+
+---
+
+## 21. 重要なポイント
+
+### ① Sparkは実行ディレクトリを基準に相対パスを解決する
+
+Scalaファイルの場所ではなく、実行時の現在ディレクトリを基準に考えます。
+
+```bash
+pwd
+```
+
+で必ず確認してください。
+
+### ② main classを明示する
+
+複数のmain classが存在する場合は、
+
+```bash
+sbt 'runMain com.example.SalesProcessor'
+```
+
+を使用します。
+
+### ③ Spark / Scalaの依存関係に注意する
+
+Sparkでは複数のライブラリが依存関係として読み込まれるため、ANTLRのようにバージョン競合が発生する場合があります。
+
+依存関係を確認する場合は、
 
 ```bash
 sbt 'show Compile / dependencyClasspath'
 ```
 
-などで実際に使用されているJARを確認する。
+を使用してください。
+
+### ④ ClickHouseへのINSERT方式に注意する
+
+現在は、
+
+```scala
+.mode("append")
+```
+
+でINSERTしています。
+
+同じデータを再処理すると重複する可能性があるため、再実行・再処理を考慮した設計にする場合は冪等性や重複排除を検討する必要があります。
